--- a/pkg/admin/gui/front-end/html/addTasks.html
+++ b/pkg/admin/gui/front-end/html/addTasks.html
@@ -34,9 +34,18 @@
         <input type="text" name="argsExec" class="form-control" value="{{ index $.modalElement "argsExec" }}">
     </div>
     <hr style="border-top: 1px solid #ababab;">
-    <div class="form-input">
-        <label class="col-form-label">{{ index .tab "delay" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDelay" }}"></i> :</label>
-        <input type="text" name="delayExec" class="form-control" value="{{ index $.modalElement "delayExec" }}">
+    <div class="form-input d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "delay" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDelay" }}"></i> :</label>
+        <div class="input-group" style="max-width: 60%;">
+            <span class="input-group-text">h</span>
+            <input type="text" name="delayExecH" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecH" }}">
+            <span class="input-group-text">m</span>
+            <input type="text" name="delayExecM" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecM" }}">
+            <span class="input-group-text">s</span>
+            <input type="text" name="delayExecS" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecS" }}">
+            <span class="input-group-text">ms</span>
+            <input type="text" name="delayExecMS" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecMS" }}">
+        </div>
     </div>
 </div>
 {{ end }}
@@ -54,9 +63,18 @@
         <input type="text" name="argsExecMove" class="form-control" value="{{ index $.modalElement "argsExecMove" }}">
     </div>
     <hr style="border-top: 1px solid #ababab;">
-    <div class="form-input">
-        <label class="col-form-label">{{ index .tab "delay" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDelay" }}"></i> :</label>
-        <input type="text" name="delayExecMove" class="form-control" value="{{ index $.modalElement "delayExecMove" }}">
+    <div class="form-input d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "delay" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDelay" }}"></i> :</label>
+        <div class="input-group" style="max-width: 60%;">
+            <span class="input-group-text">h</span>
+            <input type="text" name="delayExecMoveH" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecMoveH" }}">
+            <span class="input-group-text">m</span>
+            <input type="text" name="delayExecMoveM" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecMoveM" }}">
+            <span class="input-group-text">s</span>
+            <input type="text" name="delayExecMoveS" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecMoveS" }}">
+            <span class="input-group-text">ms</span>
+            <input type="text" name="delayExecMoveMS" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecMS" }}">
+        </div>
     </div>
 </div>
 {{ end }}
@@ -74,9 +92,18 @@
         <input type="text" name="argsExecOutput" class="form-control" value="{{ index $.modalElement "argsExecOutput" }}">
     </div>
     <hr style="border-top: 1px solid #ababab;">
-    <div class="form-input">
-        <label class="col-form-label">{{ index .tab "delay" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDelay" }}"></i> :</label>
-        <input type="text" name="delayExecOutput" class="form-control" value="{{ index $.modalElement "delayExecOutput" }}">
+    <div class="form-input d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "delay" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDelay" }}"></i> :</label>
+        <div class="input-group" style="max-width: 60%;">
+            <span class="input-group-text">h</span>
+            <input type="text" name="delayExecOutputH" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecOutputH" }}">
+            <span class="input-group-text">m</span>
+            <input type="text" name="delayExecOutputM" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecOutputM" }}">
+            <span class="input-group-text">s</span>
+            <input type="text" name="delayExecOutputS" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecOutputS" }}">
+            <span class="input-group-text">ms</span>
+            <input type="text" name="delayExecOutputMS" class="form-control" placeholder="00" value="{{ index $.modalElement "delayExecOutputMS" }}">
+        </div>
     </div>
 </div>
 {{ end }}
@@ -113,6 +140,7 @@
 
 {{ define "addTaskTRANSFER" }}
 <div id="taskTRANSFER" class="taskBlock" style="display:none;">
+    <script src="/webui/static/javaScript/selectDynamicsTasks.js"></script>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "file" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipFile" }}"></i> :</label>
@@ -144,14 +172,35 @@
         </select>
     </div>
     <hr style="border-top: 1px solid #ababab;">
-    <div class="form-input">
-        <label class="col-form-label">{{ index .tab "as" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipAs" }}"></i> :</label>
-        <input type="text" name="asTransfer" class="form-control" value="{{ index $.modalElement "asTransfer" }}">
+    <div class="form-input mb-2 d-flex align-items-center">
+        <label class="col-form-label">{{ index .tab "rule" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipRule" }}"></i> :</label>
+        <div class="form-check form-check-inline ms-3 me-3">
+            <input class="form-check-input" type="radio" name="ruleDirection" id="ruleSendRadio" value="send" {{ if $.modalElement }}{{ if eq (index $.modalElement "ruleDirection") "send" }}checked{{ end }}{{ else }}checked{{ end }}>
+            <label class="form-check-label" for="ruleSendRadio">{{ index .tab "send" }}</label>
+        </div>
+        <div class="form-check form-check-inline me-3">
+            <input class="form-check-input" type="radio" name="ruleDirection" id="ruleReceiveRadio" value="receive" {{ if $.modalElement }}{{ if eq (index $.modalElement "ruleDirection") "receive" }}checked{{ end }}{{ end }}>
+            <label class="form-check-label" for="ruleReceiveRadio">{{ index .tab "receive" }}</label>
+        </div>
+        <select name="ruleTransfer" id="transferRuleSelect" class="form-select ms-2" required style="max-width: 40%;">
+            <option value="" disabled {{ if $.modalElement }}{{ if eq (index $.modalElement "ruleTransfer") "" }}selected{{ end }}{{ else }}selected{{ end }}>{{ index .tab "selectRule" }}</option>
+            {{ range .ruleSend }}
+                <option data-dir="send" value="{{ . }}" {{ if $.modalElement }}{{ if eq (index $.modalElement "ruleTransfer") . }}selected{{ end }}{{ end }}>{{ . }}</option>
+            {{ end }}
+            {{ range .ruleReceive }}
+                <option data-dir="receive" value="{{ . }}" {{ if $.modalElement }}{{ if eq (index $.modalElement "ruleTransfer") . }}selected{{ end }}{{ end }}>{{ . }}</option>
+            {{ end }}
+        </select>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
-        <label class="col-form-label">{{ index .tab "rule" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipRule" }}"></i> :</label>
-        <input type="text" name="ruleTransfer" class="form-control" value="{{ index $.modalElement "ruleTransfer" }}">
+        <label class="col-form-label">{{ index .tab "as" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipAs" }}"></i> :</label>
+        <select name="asTransfer" id="asTransfer" class="form-select" required data-selected="{{ index $.modalElement "asTransfer" }}">
+            <option value="" disabled {{ if not (index $.modalElement "asTransfer") }}selected{{ end }}>Account</option>
+            {{ if $.modalElement }}
+              <option value="{{ index $.modalElement "asTransfer" }}" selected>{{ index $.modalElement "asTransfer" }}</option>
+            {{ end }}
+        </select>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input d-flex align-items-center">
