--- a/pkg/admin/gui/front-end/html/status_services_page.html
+++ b/pkg/admin/gui/front-end/html/status_services_page.html
@@ -1,10 +1,8 @@
 {{ define "head" }}
     <title>{{ index .tab "title" }}</title>
     <link rel="stylesheet" href="/webui/static/css/style.css">
-    <script src="/webui/static/javaScript/animationCollapseTasks.js"></script>
     <script src="/webui/static/javaScript/refreshTableServices.js"></script>
     <script src="/webui/static/javaScript/syncUpdate.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 {{ end }}
 
 {{ define "CoreService" }}
@@ -144,7 +142,7 @@
           {{ index .tab "server" }}
           <i class="bi bi-chevron-right"></i>
       </button>
-      <button class="btn btn-light btn-lg w-100 d-flex justify-content-between align-items-center btn-task-border" type="button" data-bs-toggle="collapse" data-bs-target="#ClientServiceCollapse" aria-expanded="false" aria-controls="errorTasksCollapse">
+      <button class="btn btn-light btn-lg w-100 d-flex justify-content-between align-items-center btn-task-border" type="button" data-bs-toggle="collapse" data-bs-target="#ClientServiceCollapse" aria-expanded="false" aria-controls="ClientServiceCollapse">
           {{ index .tab "client" }}
           <i class="bi bi-chevron-right"></i>
       </button>
